--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="/Users/nischalhp/SheCodes/SheCodes Plus/Weather App/style.css"
-    />
+    <link rel="stylesheet" href="src/style.css" />
     <script
       src="https://kit.fontawesome.com/abcf35e29b.js"
       crossorigin="anonymous"
