Updating path to index.js
Logging on console response of API

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>--°C</h1>
+      <h1>°C</h1>
       <div class="tempSelect">
         <a href="#" id="celsius-click" class="anchor-none"> °C</a>
         |
         <a href="#" id="fahrenheit-click" class="anchor-none">°F</a>
       </div>
-      <h2>--</h2>
+      <h2>Enter city</h2>
       <i class="fas fa-smog"></i>
       <div class="dateAndTime" id="dateAndTime">
         Saturday 18:00 <br />
@@ -91,5 +91,5 @@
     </div>
   </body>
 
-  <script src="/Users/nischalhp/SheCodes/SheCodes Plus/Weather App/src/index.js"></script>
+  <script src="src/index.js"></script>
 </html>
