linked github in index.html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
       </div>
     </div>
   </body>
-
+  <footer>
+    <a
+      href="https://github.com/AnushaAnantha/SheCodes-weather-app"
+      rel="link to github"
+      target="_blank"
+    >
+      <i class="fab fa-github big-icon"></i>
+    </a>
+  </footer>
   <script src="src/index.js"></script>
 </html>
