updated page styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <script
       src="https://kit.fontawesome.com/abcf35e29b.js"
@@ -37,6 +41,7 @@
       <h1>°C</h1>
 
       <h2>Enter city</h2>
+
       <img src="" id="main_weather_icon" />
 
       <br />
@@ -62,6 +67,7 @@
           id="current-location"
         />
       </form>
+
       <div class="row" id="forecast_cards">
         <div class="col-4">
           <div class="container">
@@ -91,16 +97,15 @@
           </div>
         </div>
       </div>
+
+      <a
+        href="https://github.com/AnushaAnantha/SheCodes-weather-app"
+        rel="link to github"
+        target="_blank"
+      >
+        <i class="fab fa-github big-icon"></i>
+      </a>
     </div>
   </body>
-  <footer>
-    <a
-      href="https://github.com/AnushaAnantha/SheCodes-weather-app"
-      rel="link to github"
-      target="_blank"
-    >
-      <i class="fab fa-github big-icon"></i>
-    </a>
-  </footer>
   <script src="src/index.js"></script>
 </html>
